--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </div>
 <p class="Trust">No Gohans Allowed</p>
 <div>
-    <img class="tiki" src="./teeks/teek.jpg">
-    <img class="tiki1" src="./teeks/teek1.jpg">
-    <img class="tiki2" src="./teeks/teek2.jpg">
+    <img class="tiki" src="teek.jpg">
+    <img class="tiki1" src="teek1.jpg">
+    <img class="tiki2" src="teek2.jpg">
 </div>
 <div>
     <video class="gb" width="420px" height="280px" controls="controls">
